--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -135,9 +135,23 @@ This command lists all the contacts stored in The Myth's Book. +
 
 Format: `list`
 
+// tag::events[]
+=== Listing all events : `events`
+
+This command replaces the list of contacts, and subsequently lists all the events stored in The Myth's Book. +
+
+Format: `events`
+
+You should see the result of using `events` as seen in Figure 5.4.1.
+
+image::events.png[width="800"]
+Figure 5.4.1 `events` Result for Events Command
+// end::events[]
+
 === Sorting all persons : `sort`
 
 This command sorts all contacts stored in The Myth's Book by their names alphabetically. +
+
 Format: `sort`
 
 === Editing a person : `edit`
@@ -324,10 +338,10 @@ The `redo` command fails as there are no `undo` commands executed previously.
 This command shows a list of all themes that is available to you in pop-up window format in The Myth's Book. +
 Format: `themeslist`
 
-You should be able to see the result of using `themeslist` as seen in Figure 5.13.1.
+You should see the result of using `themeslist` as seen in Figure 5.14.1.
 
 image::themeslist.png[width="800"]
-Figure 5.13.1 `themeslist` Result for Themes List Command
+Figure 5.14.1 `themeslist` Result for Themes List Command
 // end::themeslist[]
 
 // tag::switch[]
@@ -349,10 +363,10 @@ Examples:
 1. By typing `themeslist`, you will be able to see the available themes that The Myth's Book has to offer. +
 2. By typing `switch 2`, you will be able to switch to the 2nd theme listed in the themes list.
 
-You should see the result of using `switch 2` as seen in Figure 5.14.1.
+You should see the result of using `switch 2` as seen in Figure 5.15.1.
 
 image::Switch.png[width="800"]
-Figure 5.14.1 `switch 2` Result for Switch Command
+Figure 5.15.1 `switch 2` Result for Switch Command
 // end::switch[]
 
 === Checking for birthdays : `birthdays`
